--- a/card-animation/package.json
+++ b/card-animation/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "fumbling-flare",
+  "name": "card-animation",
   "type": "module",
   "version": "0.0.1",
   "scripts": {
@@ -10,6 +10,8 @@
     "astro": "astro"
   },
   "dependencies": {
-    "astro": "^2.5.6"
+    "@astrojs/tailwind": "^3.1.3",
+    "astro": "^2.6.4",
+    "tailwindcss": "^3.3.2"
   }
 }
